RD-2009-03-24-0: Enhancem.:  Added test for issue 2963 and 2964
                 Review:     CR

EB-2009-03-24-0: Enhancem.:  Added additional JSV test 
                 Review:     MD

DG-2009-03-19-1: Cleanup:    Cleanup of test 2759 
                 Review:     CR

DG-2009-03-19-0: Enhancem.:  Added test for issue 2759
                 Review:     CR

RD-2009-03-18-0: Bugfix:     - fixed JSV tests on fast linux hosts and with mixed
                               architectures
                             - suspressed features supported logging for exclusive
                               test
                 Review:     EB

CR-2009-03-17-0: Bugfix:     hotfix - remove changes made by CR-2009-03-16-0
                             which break installation with classic spooling again
                             and fixed host related find output differences 
                 Belongs To: CR-2009-03-16-0
                 Review:     AF

RD-2009-03-17-0: Enhancem.:  Added test for exclusive complex
                 Review:     AA

LP-2009-03-17-0: Bugfix:     Added -no-jmx flag for GE 6.2 when no JMX port
                 Review:     TBD

EB-2009-03-16-0: Enhancent.: Added additional JSV test and fixed test
                             that checks qsub -c in combination with JSV
                 Review:     MD

CR-2009-03-16-0: Bugfix:     new fix for not equal behaviour of find output
                             on all platforms for the helper script
                             scripts/analyze_dir.sh
                 Belongs To: CR-2009-03-05-0
                 Review:     TB

MG-2009-03-14-0: Bugfix:     fix for broken file_permission_test
                 Review:     

DG-2009-03-13-0: Enhancem.:  Added test for issue 2952
                 Review:     JG

CR-2009-03-13-0: Bugfix:     fixed wrong timing in was_job_running()
                 Belongs To: CR-2009-03-12-0
                 Review:     AF
